test/frontend/fail/unterminated_comment.osl
/*
This is an unterminated multi-line comment
